# slack-mcp

./: pyproject.toml
.claude/commands/: commit.md  create-pr.md
.github/workflows/: claude-code-review.yml  claude.yml
slack_mcp/: __init__.py  server.py
tests/: __init__.py
